maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: not found: value getmondeHauteur
    if( y<getmondeHauteur()-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==9999){
          ^